<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/find"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"

        android:background="@color/colorIcon"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/sortword"
        android:title="@string/action_sort_word"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/sortt"
        android:title="@string/action_sort_t"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/sorts"
        android:title="@string/action_sort_s"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/sorte"
        android:title="@string/action_sort_dagh"
        app:showAsAction="collapseActionView" />



</menu>